--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Communism</title>
+    <meta name="google-site-verification" content="xGle8qcG-K5TDV3wUP-GGj6bgFF8y03Tp8MP04N7In8" />
     <meta name="Description" content="A site promoting communism, the one true ideology.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
@@ -35,10 +36,10 @@
     <!-- Intro section -->
     <section>
         <!-- Soviet flag banner -->
-        <img class="banner" src="img/soviet_flag.png" />
+        <img class="banner" src="img/soviet_flag.png" alt="Soviet flag" />
         <!-- Hammer and sickle background -->
-        <img class="background" src="img/hammer_and_sickle.svg" />
-        <img id="papa" src="img/stalin_pointing_thin.png" alt="Stalin pointing right at you with glowing eyes." />
+        <img class="background" src="img/hammer_and_sickle.svg" alt="Hammer and sickle" />
+        <img src="img/stalin_pointing_thin.png" alt="Stalin pointing right at you with glowing eyes" />
         <header>
             <h1>Papa stalin needs</h1>
             <h2>You</h2>
@@ -52,7 +53,126 @@
         <a class="noSelect" href="/join/">Join</a>
     </section>
 
+    <!-- Equality section -->
+    <section>
+        <!-- Icon -->
+        <img src="img/Communist_star_with_golden_border_and_red_rims.png" alt="Communist star with golden border and red rims" />
+        <!-- Title -->
+        <h1>
+            We love equality
+            <br>
+            - more than anyone else
+        </h1>
+        <!-- Main text -->
+        <p>
+            Everyone* deserves to be treated fairly. That's why we communists treat everything equally.
+            <br>
+            Everything.
+            <br>
+            <strong>EVERY. THING.</strong>
+        </p>
+    </section>
+
+    <!-- Exception section -->
+    <section>
+        <div>
+            <!-- Icon -->
+            <img src="img/Communist_star_with_golden_border_and_red_rims.png" alt="Communist star with golden border and red rims" />
+            <!-- Title -->
+            <h1>
+                *Okay, there are
+                <br>
+                a couple of exceptions...
+            </h1>
+            <!-- List of exceptions -->
+            <ul>
+                <li>Women</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+                <li>Estetare</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Quote section -->
+    <section>
+        <div>
+            <img src="img/hayao-miyazaki.png" alt="Hayao Miyazaki" />
+            <p>
+                “Anime might’ve been a
+                <br>
+                mistake but communism
+                <br>
+                sure wasn’t.”
+            </p>
+            <h2>- Hayao Miyazaki</h2>
+        </div>
+    </section>
+
+    <!-- Role model section -->
+    <section>
+        <header>
+            <!-- Icon -->
+            <img src="img/marx_stylized.png" alt="Karl Marx Monocolored" />
+            <!-- Title -->
+            <h1>
+                Need role models?
+                <br>
+                We've got tons.
+            </h1>
+        </header>
+        <div>
+            <!-- Stalin -->
+            <article onmouseover="this.classList.add('hover');" onmouseout="this.classList.remove('hover');">
+                <!--<img src="img/stalin.jpg" alt="Josef Stalin" />-->
+                <h2>Josef<br>Stalin</h2>
+                <p>
+                    Papa Stalin taught us that everyone makes mistakes by making
+                    <strong>60 million</strong> of them.
+                    <br>
+                    <br>
+                    Happens to the very best of us.
+                    No big deal.
+                </p>
+            </article>
+            <!-- Lenin -->
+            <article onmouseover="this.classList.add('hover');" onmouseout="this.classList.remove('hover');">
+                <!--<img src="img/lenin.jpg" alt="Vladimir Lenin" />-->
+                <h2>Vladimir<br>Lenin</h2>
+                <p>
+                    Daddy Lenin showed us that when things don't go your way, you start a <strong>revolution</strong>.
+                    <br>
+                    <br>
+                    Truly revolutionary.
+                </p>
+            </article>
+            <!-- Marx -->
+            <article onmouseover="this.classList.add('hover');" onmouseout="this.classList.remove('hover');">
+                <!--<img src="img/Karl_Marx.jpg" alt="Karl Marx" />-->
+                <h2>Karl<br>Marx</h2>
+                <p>
+                    Grandpapa Marx realized that one shouldn't act for oneself, instead <strong>we</strong>
+                    should act for <strong>us</strong>.
+                    <br>
+                    <br>
+                    You saved the world, Grandpapa.
+                </p>
+            </article>
+        </div>
+    </section>
 
 </body>
+
+<footer>
+
+</footer>
 
 </html>
