Minor tweaks & added empty join page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <meta name="google-site-verification" content="xGle8qcG-K5TDV3wUP-GGj6bgFF8y03Tp8MP04N7In8" />
     <meta name="Description" content="A site promoting communism, the one true ideology.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
+    <script src="/js/main.js"></script>
 </head>
 
 <body>
@@ -22,7 +21,7 @@
         <a href="/" id="brand">Communism</a>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
-            <img src="img/round-menu-24px.svg">
+            <img src="img/round-menu-24px.svg" alt="Hamburger menu icon">
         </a>
         <!-- Navigation links (hidden by default) -->
         <ul class="navbar-menu" id="navbar-menu">
