--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128543377-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-128543377-1');
+    </script>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Communism</title>
     <meta name="google-site-verification" content="CITG3cw2ZJWlWd19Pnxax8B3mDH7taFpxX1-eDdfm7g" />
+    <meta name="google-site-verification" content="xGle8qcG-K5TDV3wUP-GGj6bgFF8y03Tp8MP04N7In8" />
     <meta name="Description" content="A site promoting communism, the one true ideology.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
