--- a/public/communism/index.html
+++ b/public/communism/index.html
@@ -4,16 +4,6 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128543377-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-128543377-1');
-    </script>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Communism - Murtin</title>
@@ -195,7 +185,7 @@
     </section>
 
     <footer>
-        <img src="assets/img/hammer_and_sickle _red.svg" alt="Hammer and sickle" />
+        <img src="assets/img/hammer_and_sickle_red.svg" alt="Hammer and sickle" />
         <p>
             Made by <strong>US</strong>
             <br>
@@ -205,7 +195,7 @@
             <br>
             <a href="privacy/">Privacy Policy</a>
             <br>
-            Protected by Upphovsrätten<b>©℗℠ⓁⒾⒼⓂⒶ™®</b>
+            Protected by Upphovsrätten<b>©®℗℠ⓁⒾⒼⓂⒶ™ⓈⓊⒼⓂⒶ</b>
         </p>
 
     </footer>
