--- a/public/communism/join/index.html
+++ b/public/communism/join/index.html
@@ -3,37 +3,30 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128543377-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-128543377-1');
-    </script>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Join The Communists - Murtin</title>
     <meta name="Description" content="A place where you can join the ranks of the enlightened.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="assets/img/marx_stylized.png" />
+    <link rel="shortcut icon" href="../assets/img/marx_stylized.png" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/join/join.css" />
 </head>
 
 <body>
 
     <footer>
-        <img src="../assets/img/hammer_and_sickle _red.svg" alt="Hammer and sickle" />
+        <img src="assets/img/hammer_and_sickle _red.svg" alt="Hammer and sickle" />
         <p>
             Made by <strong>US</strong>
             <br>
             ...And by us I mean <a href="https://murt.in">Martin Jonsson</a>
             <br>
-            Protected by Upphovsrätten<b>©℗℠ⓁⒾⒼⓂⒶ™®</b>
+            Here's how to <a href="contact/">Contact</a> me if you didn't see the huge button in the navigation bar.
+            <br>
+            <a href="privacy/">Privacy Policy</a>
+            <br>
+            Protected by Upphovsrätten<b>©®℗℠ⓁⒾⒼⓂⒶ™ⓈⓊⒼⓂⒶ</b>
         </p>
-
     </footer>
 
 </body>
