--- a/public/communism/privacy/index.html
+++ b/public/communism/privacy/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Privacy Policy</title>
+    <title>Privacy Policy - Murtin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="assets/img/marx_stylized.png" />
+    <link rel="shortcut icon" href="../assets/img/marx_stylized.png" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/core.css" />
 </head>
 
