--- a/public/communism/assignment/changes/index.html
+++ b/public/communism/assignment/changes/index.html
@@ -27,13 +27,14 @@
 
         <h2 id="readtime">{ord} ord, tar {min} min att läsa</h2>
 
+        <!-- Intro -->
         <p>
             Internet har förändrat dagens samhälle helt och hållet. Innan internet levde vi i en helt annan värld, en mycket mer
             isolerad och mindre värld. Med hjälp av internet och webben har världen både blivit mer upplyst och mer ignorant. 
-            Detta går att se i t.ex. hur organisationer som <a href="https://theflatearthsociety.org/home/" target="_blank">The Flat Earth Society</a>
+            Detta går att se i t.ex. hur organisationer som <a href="https://theflatearthsociety.org/home/" target="_blank" rel="noopener">The Flat Earth Society</a>
             har kunnat sprida sina konspirationsteorier om hur jorden är platt och hur NASA ljuger för världen. Detta kunde de inte 
             lyckats med om det inte hade varit för internet. Ett annat exempel skulle vara 
-            <a href="https://www.facebook.com/TexansForVaccineChoice/" target="_blank">antivaccinationsrörelsen</a>, som också lyckats
+            <a href="https://www.facebook.com/TexansForVaccineChoice/" target="_blank" rel="noopener">antivaccinationsrörelsen</a>, som också lyckats
             sprida sin gospel mycket längre med hjälp av internet och huvudsakligen sociala medier som t.ex.&nbsp;Facebook.
         </p>
         <p>
@@ -65,6 +66,9 @@
             Ifall man kollar på internet i helhetsperskeptiv skulle jag ändå säga att det medfört mer gott än ont. Ja, många ungdomar idag har det svårt
             på grund av internet och ja, mycket felaktig information sprids, men i slutändan tror jag att alla fördelar som internet för med sig är&nbsp;värt&nbsp;det.
         </p>
+
+        <!-- Upp-knapp -->
+        <button onclick="topFunction()" id="topButton" title="Tillbaka till toppen">Upp</button>
     </article>
 
 </body>
