--- a/public/communism/assignment/images/index.html
+++ b/public/communism/assignment/images/index.html
@@ -27,41 +27,47 @@
 
         <h2 id="readtime">{ord} ord, tar {min} min att läsa</h2>
 
+        <!-- Intro -->
         <p>
-            När man behöver en bild på något är det väldigt enkelt att man går till <a href="https://images.google.com" target="_blank">Google Bilder</a>
+            När man behöver en bild på något är det väldigt enkelt att man går till <a href="https://images.google.com" target="_blank" rel="noopener">Google Bilder</a>
             och hämtar den därifrån utan en tanke på vem som skapade den, men ifall man planerar att använda bilden i kommersiellt syfte måste
             man få tillåtelse från bildens skapare enligt 
-            <a href="https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/lag-1960729-om-upphovsratt-till-litterara-och_sfs-1960-729" target="_blank">upphovsrättslagen</a>,
+            <a href="https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/lag-1960729-om-upphovsratt-till-litterara-och_sfs-1960-729" target="_blank" rel="noopener">upphovsrättslagen</a>,
             eller med det mer formella namnet <i>Lagen om upphovsrätt till litterära och konstnärliga&nbsp;verk</i>.
         </p>
         <p>
             Hur är det då meningen att man ska få tag på bilder att använda på sin fina blogg om söta kattungar? Här är ett&nbsp;gäng&nbsp;alternativ:
         </p>
 
+        <!-- Gör din egen bild -->
         <h2 class="section-title">Gör din egen bild</h2>
         <p>
             Det är helt enkelt bäst ifall du gör bilden själv eftersom du då själv har rätt till användning av&nbsp;bilden.
         </p>
 
+        <!-- Få tillåtelse -->
         <h2 class="section-title">Få tillåtelse</h2>
         <p>
             Ifall du är helt bestämd på att inte göra en egen bild kan du fråga bildens skapare ifall de kan ge dig tillåtelse att använda
             bilden. Oftast behöver du då ha med skaparens namn under bilden och/eller referera till dens&nbsp;hemsida. 
         </p>
 
+        <!-- Bildbyrå -->
         <h2 class="section-title">Bildbyrå</h2>
         <p>
             Du kan få tag på bilder både genom att köpa och att hitta gratis på bildbyråar. Ett typiskt exempel på en bildbyrå där man kan
-            hitta en mängd olika bilder till en mängd olika användningar är&nbsp;<a href="https://www.shutterstock.com/" target="_blank">Shutterstock</a>.
+            hitta en mängd olika bilder till en mängd olika användningar är&nbsp;<a href="https://www.shutterstock.com/" target="_blank" rel="noopener">Shutterstock</a>.
         </p>
 
+        <!-- Creative Commons -->
         <h2 class="section-title">Creative Commons</h2>
         <p>
-            Använder du bilder som är licensierade med <a href="https://creativecommons.org/about/" target="_blank">Creative Commons (CC)</a> licensen innebär
+            Använder du bilder som är licensierade med <a href="https://creativecommons.org/about/" target="_blank" rel="noopener">Creative Commons (CC)</a> licensen innebär
             det att du har rätten att använda bilden utan att behöva själv begära tillåtelse från bilden skapare. Men det finns olika versioner av CC och vissa
             versioner säger att bilden inte får användas i kommersiellt syfte och andra säger att man inte får modifiera&nbsp;bilden.
         </p>
 
+        <!-- Hur bör det vara? -->
         <h2 class="section-title">Hur bör det vara?</h2>
         <p>
             Jag tycker att det är bra att den som skapade en bild äger bilden och upphovsrätten är väldigt bra eftersom den gäller automatiskt
@@ -78,6 +84,8 @@
             ett nytt verk, men om märkvärdiga visuella förändringar tillförs är det en&nbsp;ny&nbsp;bild.
         </p>
 
+        <!-- Upp-knapp -->
+        <button onclick="topFunction()" id="topButton" title="Tillbaka till toppen">Upp</button>
     </article>
 
 </body>
