--- a/public/communism/assignment/index.html
+++ b/public/communism/assignment/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
     
+    <a id="back" href="../">
+        <img src="../assets/img/baseline-arrow_back-24px.svg">
+        <img src="../assets/img/marx_stylized.png">
+    </a>
+
     <a id="changes" href="changes/"><h1>De största sammhällsförändringar som internet medfört</h1></a>
     <a id="cornerstones" href="cornerstones/"><h1>Grundstenarna för säker lagring av användaruppgifter</h1></a>
     <a id="images" href="images/"><h1>Användning av bilder online</h1></a>
