--- a/public/communism/assignment/security/index.html
+++ b/public/communism/assignment/security/index.html
@@ -27,6 +27,7 @@
 
         <h2 id="readtime">{ord} ord, tar {min} min att läsa</h2>
 
+        <!-- Tredjepartskod -->
         <h2 class="section-title">Tredjepartskod</h2>
         <p>
             Kod från tredjepart är väldigt användbart för en snabb utvecklingsprocess och är nödvändig om man inte vill återuppfinna
@@ -54,11 +55,12 @@
             att det finns buggar och säkerhetsluckor i din kod jämfört med&nbsp;PayPals&nbsp;kod.
         </p>
 
+        <!-- Val av webbhotell -->
         <h2 class="section-title">Val av webbhotell</h2>
         <p>
             När man letar efter ett bra webbhotell att ladda upp sin webbsida till finns det ett antal säkerhetskriterier som bör uppfyllas.
             Beroende på hur viktig hemsidan du laddar upp är kan du lämna ute vissa kriterier, t.ex. om du ska hitta en värd till 
-            <a href="https://www.nasa.gov/" target="_blank">NASA</a>s nya hemsida kan det vara bra om du är väldigt noga med kriterierna, 
+            <a href="https://www.nasa.gov/" target="_blank" rel="noopener">NASA</a>s nya hemsida kan det vara bra om du är väldigt noga med kriterierna, 
             men om du ska ladda upp en temporär hemsida för ett skolprojekt är det inte av lika&nbsp;stor&nbsp;betydelse.
         </p>
         <p>
@@ -77,11 +79,13 @@
         </p>
         <p>
             Skydd från 
-            <a href="https://www.cloudflare.com/learning/ddos/what-is-a-ddos-attack/" target="_blank">DDoS-attacker</a>
+            <a href="https://www.cloudflare.com/learning/ddos/what-is-a-ddos-attack/" target="_blank" rel="noopener">DDoS-attacker</a>
             (Distributed Denial of Service) i form av t.ex. cloudflare kan vara ett nödvändigt krav om din hemsida är populär nog för att någon
             skulle vilja ta&nbsp;ner&nbsp;den.
         </p>
 
+        <!-- Upp-knapp -->
+        <button onclick="topFunction()" id="topButton" title="Tillbaka till toppen">Upp</button>
     </article>
 
 </body>
